--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,73 @@
 
+@ARTICLE{Huber2015-ei,
+  title       = "Orchestrating high-throughput genomic analysis with
+                 Bioconductor",
+  author      = "Huber, Wolfgang and Carey, Vincent J and Gentleman, Robert and
+                 Anders, Simon and Carlson, Marc and Carvalho, Benilton S and
+                 Bravo, Hector Corrada and Davis, Sean and Gatto, Laurent and
+                 Girke, Thomas and Gottardo, Raphael and Hahne, Florian and
+                 Hansen, Kasper D and Irizarry, Rafael A and Lawrence, Michael
+                 and Love, Michael I and MacDonald, James and Obenchain,
+                 Valerie and Ole{\'s}, Andrzej K and Pag{\`e}s, Herv{\'e} and
+                 Reyes, Alejandro and Shannon, Paul and Smyth, Gordon K and
+                 Tenenbaum, Dan and Waldron, Levi and Morgan, Martin",
+  affiliation = "European Molecular Biology Laboratory, Heidelberg, Germany. 1]
+                 Channing Division of Network Medicine, Brigham and Women's
+                 Hospital and Harvard Medical School, Boston, Massachusetts,
+                 USA. [2] Harvard School of Public Health, Boston,
+                 Massachusetts, USA. Genentech, South San Francisco,
+                 California, USA. Computational Biology Program, Fred
+                 Hutchinson Cancer Research Center, Seattle, Washington, USA.
+                 Department of Medical Genetics, School of Medical Sciences,
+                 State University of Campinas, Campinas, Brazil. Center for
+                 Bioinformatics and Computational Biology, University of
+                 Maryland, College Park, Maryland, USA. Center for Cancer
+                 Research, National Cancer Institute, National Institutes of
+                 Health, Bethesda, Maryland, USA. Department of Biochemistry,
+                 University of Cambridge, Cambridge, UK. Institute for
+                 Integrative Genome Biology, University of California,
+                 Riverside, Riverside, California, USA. Vaccine and Infectious
+                 Disease Division, Fred Hutchinson Cancer Research Center,
+                 Seattle, Washington, USA. Novartis Institutes for Biomedical
+                 Research, Basel, Switzerland. 1] McKusick-Nathans Institute of
+                 Genetic Medicine, Johns Hopkins University, Baltimore,
+                 Maryland, USA. [2] Department of Biostatistics, Johns Hopkins
+                 University, Baltimore, Maryland, USA. 1] Harvard School of
+                 Public Health, Boston, Massachusetts, USA. [2] Dana-Farber
+                 Cancer Institute, Boston, Massachusetts, USA. Department of
+                 Environmental and Occupational Health Sciences, University of
+                 Washington, Seattle, Washington, USA. 1] Walter and Eliza Hall
+                 Institute of Medical Research, Parkville, Victoria, Australia.
+                 [2] Department of Mathematics and Statistics, University of
+                 Melbourne, Parkville, Victoria, Australia. School of Urban
+                 Public Health at Hunter College, City University of New York,
+                 New York, New York, USA.",
+  abstract    = "Bioconductor is an open-source, open-development software
+                 project for the analysis and comprehension of high-throughput
+                 data in genomics and molecular biology. The project aims to
+                 enable interdisciplinary research, collaboration and rapid
+                 development of scientific software. Based on the statistical
+                 programming language R, Bioconductor comprises 934
+                 interoperable packages contributed by a large, diverse
+                 community of scientists. Packages cover a range of
+                 bioinformatic and statistical applications. They undergo
+                 formal initial review and continuous automated testing. We
+                 present an overview for prospective users and contributors.",
+  journal     = "Nat. Methods",
+  publisher   = "Springer Nature",
+  volume      =  12,
+  number      =  2,
+  pages       = "115--121",
+  month       =  feb,
+  year        =  2015,
+  url         = "http://dx.doi.org/10.1038/nmeth.3252",
+  language    = "en",
+  issn        = "1548-7091, 1548-7105",
+  pmid        = "25633503",
+  doi         = "10.1038/nmeth.3252",
+  pmc         = "PMC4509590"
+}
+
 @ARTICLE{Kaitoua2017-pw,
   title    = "Framework for Supporting Genomic Operations",
   author   = "Kaitoua, A and Pinoli, P and Bertoni, M and Ceri, S",
@@ -492,6 +561,20 @@
   pmc         = "PMC545600"
 }
 
+@ARTICLE{Li2009-ss,
+  title     = "The sequence alignment/map format and {SAMtools}",
+  author    = "Li, Heng and Handsaker, Bob and Wysoker, Alec and Fennell, Tim
+               and Ruan, Jue and Homer, Nils and Marth, Gabor and Abecasis,
+               Goncalo and Durbin, Richard and {Others}",
+  journal   = "Bioinformatics",
+  publisher = "Oxford Univ Press",
+  volume    =  25,
+  number    =  16,
+  pages     = "2078--2079",
+  year      =  2009,
+  issn      = "1367-4803"
+}
+
 @ARTICLE{Lawrence2013-wg,
   title   = "Software for Computing and Annotating Genomic Ranges",
   author  = "Lawrence, Michael and Huber, Wolfgang and Pag{\`e}s, Herv{\'e} and
@@ -503,4 +586,15 @@
   url     = "http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118",
   issn    = "1553-734X",
   doi     = "10.1371/journal.pcbi.1003118"
+}
+
+@ARTICLE{Huber2015-ft,
+  title   = "Orchestrating high-throughput genomic analysis with Bioconductor",
+  author  = "Huber, W and Carey, V J and Gentleman, R and Anders, S and
+             Carlson, M and Carvalho, B S",
+  journal = "Nat. Methods",
+  volume  =  12,
+  pages   = "115--121",
+  year    =  2015,
+  issn    = "1548-7091"
 }
