--- a/references.bib
+++ b/references.bib
@@ -598,3 +598,56 @@
   year    =  2015,
   issn    = "1548-7091"
 }
+
+
+@ARTICLE{Kozanitis2014-va,
+  title       = "Using Genome Query Language to uncover genetic variation",
+  author      = "Kozanitis, Christos and Heiberg, Andrew and Varghese, George
+                 and Bafna, Vineet",
+  affiliation = "Computer Science and Engineering, University of California San
+                 Diego, 9500 Gilman Drive, San Diego, CA 92123 and Microsoft
+                 Research, 1065 La Avenida, Mountain View, CA 94043, USA.",
+  abstract    = "MOTIVATION: With high-throughput DNA sequencing costs dropping
+                 <\$1000 for human genomes, data storage, retrieval and
+                 analysis are the major bottlenecks in biological studies. To
+                 address the large-data challenges, we advocate a clean
+                 separation between the evidence collection and the inference
+                 in variant calling. We define and implement a Genome Query
+                 Language (GQL) that allows for the rapid collection of
+                 evidence needed for calling variants. RESULTS: We provide a
+                 number of cases to showcase the use of GQL for complex
+                 evidence collection, such as the evidence for large structural
+                 variations. Specifically, typical GQL queries can be written
+                 in 5-10 lines of high-level code and search large datasets
+                 (100 GB) in minutes. We also demonstrate its complementarity
+                 with other variant calling tools. Popular variant calling
+                 tools can achieve one order of magnitude speed-up by using GQL
+                 to retrieve evidence. Finally, we show how GQL can be used to
+                 query and compare multiple datasets. By separating the
+                 evidence and inference for variant calling, it frees all
+                 variant detection tools from the data intensive evidence
+                 collection and focuses on statistical inference. AVAILABILITY:
+                 GQL can be downloaded from
+                 http://cseweb.ucsd.edu/~ckozanit/gql.",
+  journal     = "Bioinformatics",
+  volume      =  30,
+  number      =  1,
+  pages       = "1--8",
+  month       =  jan,
+  year        =  2014,
+  url         = "http://dx.doi.org/10.1093/bioinformatics/btt250",
+  language    = "en",
+  issn        = "1367-4803, 1367-4811",
+  pmid        = "23751181",
+  doi         = "10.1093/bioinformatics/btt250",
+  pmc         = "PMC3866549"
+}
+
+
+@Manual{Wickham2017-dplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain Francois and Lionel Henry and Kirill Müller},
+    year = {2017},
+    note = {R package version 0.7.4},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
